--- a/src/front/index.html
+++ b/src/front/index.html
@@ -15,6 +15,8 @@
 	<body>
 		<div id="content"></div>
 		
+		<script type="application/ecmascript" src="app/controllers/baseController.js"></script>
+		
 		<!-- MAWORK CLI API NE PAS TOUCHER -->
 		
 		<!-- MAWORK CLI MODEL NE PAS TOUCHER -->
